# SimuSIGW

./: .gitignore  Examples.ipynb  README.md  SimuSIGW_tutorial.ipynb  benchmark_leapfrog_backends.py  benchmark_leapfrog_workers.py  benchmark_torch_backends.py  pyproject.toml  run_leapfrog_cpu_parallel.py  simulation_SIGW.py
SimuSIGW/: README.md  __init__.py  fd_cpu.py  fft_cpu.py  fields.py  spectrum.py  torch_gpu.py
SimuSIGW/__pycache__/: fd_cpu._d1x4-33.py312.1.nbc  fd_cpu._d1x4-33.py312.2.nbc  fd_cpu._d1x4-33.py312.3.nbc  fd_cpu._d1x4-33.py312.4.nbc  fd_cpu._d1x4-33.py312.nbi  fd_cpu._d1x4-33.py313.1.nbc  fd_cpu._d1x4-33.py313.2.nbc  fd_cpu._d1x4-33.py313.3.nbc  fd_cpu._d1x4-33.py313.4.nbc  fd_cpu._d1x4-33.py313.nbi  fd_cpu._d1y4-48.py312.1.nbc  fd_cpu._d1y4-48.py312.2.nbc  fd_cpu._d1y4-48.py312.3.nbc  fd_cpu._d1y4-48.py312.4.nbc  fd_cpu._d1y4-48.py312.nbi  fd_cpu._d1y4-48.py313.1.nbc  fd_cpu._d1y4-48.py313.2.nbc  fd_cpu._d1y4-48.py313.3.nbc  fd_cpu._d1y4-48.py313.4.nbc  fd_cpu._d1y4-48.py313.nbi  fd_cpu._d1z4-63.py312.1.nbc  fd_cpu._d1z4-63.py312.2.nbc  fd_cpu._d1z4-63.py312.3.nbc  fd_cpu._d1z4-63.py312.4.nbc  fd_cpu._d1z4-63.py312.nbi  fd_cpu._d1z4-63.py313.1.nbc  fd_cpu._d1z4-63.py313.2.nbc  fd_cpu._d1z4-63.py313.3.nbc  fd_cpu._d1z4-63.py313.4.nbc  fd_cpu._d1z4-63.py313.nbi  fd_cpu._d2x4-78.py312.1.nbc  fd_cpu._d2x4-78.py312.2.nbc  fd_cpu._d2x4-78.py312.3.nbc  fd_cpu._d2x4-78.py312.4.nbc  fd_cpu._d2x4-78.py312.nbi  fd_cpu._d2x4-78.py313.1.nbc  fd_cpu._d2x4-78.py313.2.nbc  fd_cpu._d2x4-78.py313.3.nbc  (+224 more)
examples/: custom_model.py  gpu_torch_backend.py
