[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "SimuSIGW"
version = "0.1.0"
description = "Numerical leapfrog solvers for scalar-induced gravitational waves."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [
  { name = "SimuSIGW Contributors" }
]
dependencies = [
  "numpy>=1.23",
  "scipy>=1.10",
  "numba>=0.57",
]

[project.optional-dependencies]
plot = ["matplotlib>=3.7"]
gpu = ["torch>=2.0"]
dev = ["matplotlib>=3.7"]

[tool.setuptools.packages.find]
where = ["."]
include = ["SimuSIGW*"]
